[package]
name = "turn-server"
version = "4.0.0"
edition = "2024"
authors = ["mycrl <lepidodendraceae@gmail.com>"]
description = "A pure rust-implemented turn server."
readme = "./README.md"
homepage = "https://github.com/mycrl/turn-rs"
repository = "https://github.com/mycrl/turn-rs"
license = "GPL-2.0-or-later"
keywords = ["stun", "webrtc", "turn", "turn-server"]
categories = ["parsing", "network-programming"]

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bytes = "1"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.9.6"
simple_logger = "5"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", features = ["aws-lc-rs"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
num_cpus = "1.17.0"
tonic = { version = "0.14", features = ["deflate"], optional = true }
prost = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
url = { version = "2.5.7", optional = true }
base64 = "0.22"
num_enum = "0.7"
aws-lc-rs = { version = "1.14", features = ["prebuilt-nasm"] }
md-5 = "0.10"
crc32fast = "1.5.0"
rand = "0.9"

[build-dependencies]
tonic-prost-build = { version = "0.14", optional = true }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "stun"
harness = false

[features]
default = ["all"]
all = ["udp", "tcp", "ssl", "rpc"]
tcp = []
udp = []
rpc-build = ["dep:tonic-prost-build", "dep:tonic-prost", "dep:prost"]
rpc = ["dep:tonic", "rpc-build", "dep:url"]
ssl = ["dep:tokio-rustls", "tonic/tls-aws-lc"]

[profile.release]
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
debug = false
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = ["./", "./sdk"]
