[package]
name = "callback"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/napi-rs/napi-rs", features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = { git = "https://github.com/napi-rs/napi-rs" }

[build-dependencies]
napi-build = { git = "https://github.com/napi-rs/napi-rs" }