[package]
name = "turn-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.7.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.28.2", features = ["net"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tabled = "0.15.0"
