[package]
name = "turn-driver"
version = "0.2.0"
edition = "2021"
description = "Drivers for turn-rs."
license = "MIT"
readme = "./README.md"
repository = "https://github.com/mycrl/turn-rs"

[dependencies]
async-trait = "0.1"
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["net"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "http2", "gzip"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tabled = "0.15.0"
