[package]
name = "turn-drive"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple"

[dependencies]
tokio = { version = "1.35.1", features = ["net"]}
tonic = { version = "0.10", features = ["prost", "gzip", "tls"] }
turn-rs = { path = "../../turn", version = "1" }
thiserror = "1.0.53"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[dev-dependencies]
anyhow = "1.0"
tokio = {version = "1", features = ["full"]}
