[package]
name = "exchange"
version = "0.1.0"
authors = [
    "Mr.Panda <xivistudios@gmail.com>",
    "huangjj27 <huangjj.27@qq.com>",
]
edition = "2018"

[profile.release]
opt-level = 3
overflow-checks = true
lto = true

[dependencies]
bytes = "0.5.4"
futures = "0.3"

[dependencies.configure]
path = "../lib/configure"

[dependencies.transport]
path = "../lib/transport"

[dependencies.tokio]
version = "0.2"
features = ["full"]
