[package]
name = "exchange"
version = "0.1.0"
edition = "2018"
authors = [
    "Mr.Panda <xivistudios@gmail.com>",
    "huangjj27 <huangjj.27@qq.com>",
]

[dependencies]
bytes = "0.5.4"

[dependencies.configure]
path = "../lib/configure"

[dependencies.transport]
path = "../lib/transport"

[dependencies.balance]
path = "../lib/balance"

[dependencies.tokio]
version = "0.2"
features = ["full"]
