[package]
name = "publish"
version = "0.1.0"
authors = ["Mr.Panda <xivistudios@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
futures = "0.3"

[dependencies.rtmp]
path = "../lib/rtmp"

[dependencies.transport]
path = "../lib/transport"

[dependencies.tokio]
version = "0.2"
features = ["full"]
