[package]
name = "pull"
version = "0.1.0"
authors = ["Mr.Panda <xivistudios@gmail.com>"]
edition = "2018"

[dependencies]
tungstenite = "0.10.1"
bytes = "0.5.4"
futures = "0.3"
http = "0.2"

[dependencies.flv]
path = "../lib/flv"

[dependencies.configure]
path = "../lib/configure"

[dependencies.transport]
path = "../lib/transport"

[dependencies.tokio]
version = "0.2"
features = ["full"]
