[package]
name = "turn-server-sdk"
version = "0.1.0-beta.4"
edition = "2024"
description = "Client SDK for interacting with the turn-server gRPC API."
license = "MIT"
repository = "https://github.com/mycrl/turn-rs"
readme = "README.md"

[dependencies]
tonic = { version = "0.14", default-features = false, features = ["transport"] }
protos = { path = "../protos", version = "0.1.0-beta.3", package = "turn-server-protos" }
md-5 = "0.10"
sha2 = "0.10.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["deflate"] }
