[package]
name = "stun"
version = "1.0.2"
edition = "2021"
authors = ["Mr.Panda <xivistudios@gmail.com>"]
description = "Fast and zero-cost stun message decoder and encoder."
readme = "../README.md"
homepage = "https://github.com/mycrl/turn-rs"
repository = "https://github.com/mycrl/turn-rs"
license = "GPL-2.0-or-later"
keywords = ["stun", "webrtc", "turn"]
categories = ["parsing", "network-programming"]

[dependencies]
bytes = "1"
num_enum = "0.7"
md-5 = "0.10"
hmac = "0.12"
sha-1 = "0.10"
crc = "3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
