[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
once_cell = "1.18.0"
tokio = { version = "1", features = ["full"] }
stun = { path = "../stun", version = "1" }
turn = { path = "../turn", version = "1" }
turn-server = { path = "../turn-server" }
bytes = "1.4.0"
rand = "0.8.5"

[dev-dependencies.criterion]
features = ["async_tokio"]
version = "0.5"

[[bench]]
name = "benchmark"
harness = false
