[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
stun = { path = "../stun" }
turn = { path = "../turn" }
turn-server = { path = "../turn-server" }
turn-driver = { path = "../drivers" }
bytes = "1.4.0"
rand = "0.8.5"
once_cell = "1"
async-trait = "0.1"
