[package]
name = "tui"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
crossterm = "0.27.0"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1.35.1", features = ["full"] }
tonic = { version = "0.10", features = ["prost", "gzip", "tls"] }
prost = "0.12"
ratatui = "0.25.0"

[build-dependencies]
tonic-build = "0.10"
