[package]
name = "turn-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.4.0"
parking_lot = "0.12"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
simple_logger = "4"
log = "0.4"
toml = "0.7"
