[package]
name = "turn-server"
version = "3.0.0"
edition = "2021"
authors = ["Mr.Panda <xivistudios@gmail.com>"]
description = "A pure rust-implemented turn server."
readme = "../README.md"
homepage = "https://github.com/mycrl/turn-rs"
repository = "https://github.com/mycrl/turn-rs"
license = "GPL-2.0-or-later"
keywords = ["stun", "webrtc", "turn", "turn-server"]
categories = ["parsing", "network-programming"]

[dependencies]
ahash = "0.8"
async-trait = "0.1"
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
mimalloc = { version = "*", default-features = false }
num_cpus = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
stun = { path = "../stun", version = "1" }
simple_logger = "5"
turn = { path = "../turn", version = "1" }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
rand = "0.8"
once_cell = "1"
itertools = "0.13.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "http2", "gzip"]

[features]
prometheus = []

