[package]
name = "turn-rs"
version = "1.2.1"
edition = "2021"
authors = ["Mr.Panda <xivistudios@gmail.com>"]
description = "A library for handling round sessions."
readme = "../README.md"
homepage = "https://github.com/colourful-rtc/turn-rs"
repository = "https://github.com/colourful-rtc/turn-rs"
license = "GPL-2.0-or-later"
keywords = [
    "stun",
    "webrtc",
    "turn"
]

categories = [
    "parsing",
    "network-programming"
]

[dependencies]
turn-proxy = { path = "../turn-proxy" }
faster-stun = { path = "../stun", version = "1" }
parking_lot = "0.12"
async-trait = "0.1"
bytes = "1"
anyhow = "1.0"
rand = "0.8"
