[package]
name = "mycrl-turn"
version = "1.3.0"
edition = "2021"
authors = ["mycrl <lepidodendraceae@gmail.com>"]
description = "A library for handling round sessions."
readme = "../README.md"
homepage = "https://github.com/mycrl/turn-rs"
repository = "https://github.com/mycrl/turn-rs"
license = "GPL-2.0-or-later"
keywords = ["stun", "webrtc", "turn"]
categories = ["parsing", "network-programming"]

[dependencies]
ahash = "0.8"
stun = { path = "../stun", version = "1.1", package = "mycrl-stun" }
bytes = "1"
rand = "0.8"
parking_lot = "0.12"

[dev-dependencies]
pollster = "0.3.0"
