[package]
name = "turn_code"
version = "0.1.0"
edition = "2018"
authors = [
    "Mr.Panda <xivistudios@gmail.com>",
    "huangjj27 <huangjj.27@qq.com>"
]

[dependencies]
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
env_logger = "0.8.2"
num_cpus = "1.13.0"
toml = "0.5.7"
bytes = "1"
anyhow = "1.0"
rand = "0.7"
num_enum = "0.5.0"
md5 = "0.7.0"
hmac = "0.10.1"
sha-1 = "0.9.2"
crc = "1.8.1"
log = "0.4.11"