[package]
name = "turn_code"
version = "0.1.0"
edition = "2018"
authors = [
    "Mr.Panda <xivistudios@gmail.com>",
    "huangjj27 <huangjj.27@qq.com>"
]

[dependencies]
stun = { path = "../lib/stun" }
transport = { path = "../lib/transport" }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.8.2"
num_cpus = "1.13.0"
toml = "0.5.7"
log = "0.4.11"
bytes = "1"
anyhow = "1.0"
rand = "0.7"
