[package]
name = "turn-cluster-router"
version = "0.1.0"
edition = "2024"
authors = ["mycrl <lepidodendraceae@gmail.com>"]
description = "TURN server cluster router service"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
simple_logger = "5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["deflate"] }
protos = { path = "../../protobuf", version = "0.1.0-beta.1", package = "turn-server-protos" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
