[package]
name = "turn-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
codec = { workspace = true }
tokio = { version = "1", features = ["sync", "net", "time", "macros"] }
tokio-rustls = { version = "0.6", optional = true }
rand = "0.9.2"

[features]
ssl = ["dep:tokio-rustls"]
default = ["ssl"]
