[package]
name = "turn-server-service"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8"
bytes = "1"
parking_lot = "0.12"
rand = "0.9"
codec = { workspace = true }
serde = { version = "1", optional = true }

[dev-dependencies]
pollster = "0.4.0"
anyhow = "1.0"

[features]
serde = ["dep:serde"]
