[package]
name = "transport"
version = "0.1.0"
authors = ["Mr.Panda <xivistudios@gmail.com>"]
edition = "2018"

[dependencies]
convert = { path = "../convert" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
num_enum = "0.5.0"
anyhow = "1.0"
bytes = "1"
