[package]
name = "signaling"
version = "0.1.0"
edition = "2021"
authors = ["Mr.Panda <xivistudios@gmail.com>"]

[dependencies]
trpc = { path = "../../module/trpc" }
clap = { version = "3", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.16.0"
tokio-tungstenite = "0.16.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.19"
anyhow = "1.0.52"
http = "0.2.6"
env_logger = "0.8.2"
log = "0.4.11"
