[package]
name = "turn"
version = "0.1.0"
edition = "2021"
authors = ["Mr.Panda <xivistudios@gmail.com>"]

[dependencies]
trpc = { path = "../../module/trpc" }
stun = { path = "../../module/stun" }
clap = { version = "3", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
async-trait = "0.1.52"
env_logger = "0.8.2"
num_cpus = "1.13.0"
log = "0.4.11"
bytes = "1"
anyhow = "1.0"
rand = "0.7"
